sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: ')' expected but $XMLSTART$< found.
	while (i+ecart <getNombreValeurs()-2) {
                       ^AlgCombSort:7: error: in XML literal: '>' expected instead of '('
	while (i+ecart <getNombreValeurs()-2) {
                                        ^AlgCombSort:13: error: ')' expected but '}' found.
	}	
        ^AlgCombSort:14: error: in XML literal: in XML content, please use '}}' to express '}'
}
^AlgCombSort:7: error:  I encountered a '}' where I didn't expect one, maybe this tag isn't closed <getNombreValeurs>
	while (i+ecart <getNombreValeurs()-2) {
                        ^AlgCombSort:21: error: '}' expected but eof found.

 ^